--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -2,6 +2,7 @@
 # ex: set syntax=python:
 
 from buildbot.buildslave import BuildSlave
+from buildbot.config import BuilderConfig
 from buildbot.process import factory
 from buildbot.status import html
 from buildbot.steps import source, shell
@@ -109,3 +110,15 @@ for builder_name, factory_steps in build_steps.iteritems():
             slavename = default_slavename,
             factory = factory.BuildFactory(factory_steps),
             ))
+
+
+
+################################################################################
+#
+# Schedulers
+#
+################################################################################
+
+
+
+c['schedulers'] = [] 
