More work on new buildbot config

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -7,6 +7,7 @@ from buildbot.process import factory
 from buildbot.scheduler import Nightly, Triggerable
 from buildbot.status import html
 from buildbot.steps import shell, source, transfer
+from buildbot.steps.trigger import Trigger
 
 import local_config as config
 
@@ -34,7 +35,7 @@ installer_version = 'NIGHTLY'
 installer_filename = installer_basename + '-' + installer_version + '.dmg'
 installer_slavesrc = '/tmp/mw_installer/' + installer_filename
 installer_masterdest = (config.installer_destination_path + '/' +
-                        installer_file_name)
+                        installer_filename)
 
 
 
@@ -74,10 +75,18 @@ def shell_step(*args, **kwargs):
     return shell.ShellCommand(*args, **kwargs)
 
 
+def build_step(**kwargs):
+    return shell_step(
+        description = 'building',
+        descriptionDone = 'build',
+        **kwargs
+        )
+
+
 def xcodebuild_step(target = 'Everything',
                     configuration = 'Development (10.5 Compatible)'):
 
-    return shell_step(
+    return build_step(
         command = [
             'xcodebuild',
             '-target', target,
@@ -85,38 +94,40 @@ def xcodebuild_step(target = 'Everything',
             'clean',
             'build',
             ],
-        description = 'building',
-        descriptionDone = 'build',
         )
 
 
 def make_step(target='all'):
-    return shell_step(command = ['make', target])
+    return build_step(command = ['make', target])
 
 
 component_build_steps = (
 
     ('clean_all', [
             shell_step(
-                command = ['rm', '-Rf', path],
-                )
-            for path in (
-                '/Applications/MWClient.app',
-                '/Applications/MWEditor.app',
-                '/Applications/MWServer.app',
-                '/Documents/MonkeyWorks',
-                '/Library/Application Support/MonkeyWorks',
-                '/Library/Frameworks/MonkeyWorksCocoa.framework',
-                '/Library/Frameworks/MonkeyWorksCore.framework',
-                )
+                command = [
+                    'rm', '-Rf',
+                    '/Applications/MWClient.app',
+                    '/Applications/MWEditor.app',
+                    '/Applications/MWServer.app',
+                    '/Documents/MonkeyWorks',
+                    '/Library/Application Support/MonkeyWorks',
+                    '/Library/Frameworks/MonkeyWorksCocoa.framework',
+                    '/Library/Frameworks/MonkeyWorksCore.framework',
+                    ],
+                description = 'cleaning',
+                descriptionDone = 'clean',
+                ),
             ]),
 
     ('build_mw_supporting', [
             git_step('mw_supporting'),
             shell_step(
                 command = ['git', 'submodule', 'update', '--init'],
+                description = ['updating', 'submodules'],
+                descriptionDone = ['update', 'submodules'],
                 ),
-            shell_step(
+            build_step(
                 command = ['python', 'fresh_build.py'],
                 ),
             ]),
@@ -183,7 +194,7 @@ component_build_steps = (
 
     ('build_installer', [
             git_step('dicarlolab_mwbuild'),
-            shell_step(
+            build_step(
                 command = ['./build_installer', installer_version],
                 workdir = 'build/installer',
                 ),
@@ -198,6 +209,16 @@ component_build_steps = (
 
 
 composite_build_steps = (
+
+    ('build_all', [
+            Trigger(
+                schedulerNames = [component_info[0]],
+                waitForFinish = True,
+                updateSourceStamp = False,
+                )
+            for component_info in component_build_steps
+            ]),
+
     )
 
 
@@ -213,6 +234,7 @@ composite_build_steps = (
 c['builders'] = []
 c['schedulers'] = [] 
 
+
 for build_steps in (component_build_steps, composite_build_steps):
     for builder_name, factory_steps in build_steps:
         c['builders'].append(BuilderConfig(
@@ -225,3 +247,11 @@ for build_steps in (component_build_steps, composite_build_steps):
                 name = builder_name,
                 builderNames = [builder_name],
                 ))
+
+
+c['schedulers'].append(Nightly(
+            name = 'nightly_build_and_test',
+            builderNames = ['build_all'],
+            branch = None,
+            hour = 0,
+            ))
