More work on new buildbot config

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -72,21 +72,23 @@ def git_step(reponame, mode='update'):
 
 
 def shell_step(*args, **kwargs):
+    subdir = kwargs.pop('subdir', None)
+    if subdir is not None:
+        kwargs.setdefault('workdir', 'build/' + subdir)
+
+    for key, val in (('description', 'building'), ('descriptionDone', 'build')):
+        if subdir is not None:
+            val = [val, subdir]
+        kwargs.setdefault(key, val)
+
     return shell.ShellCommand(*args, **kwargs)
 
 
-def build_step(**kwargs):
-    return shell_step(
-        description = 'building',
-        descriptionDone = 'build',
-        **kwargs
-        )
-
-
 def xcodebuild_step(target = 'Everything',
-                    configuration = 'Development (10.5 Compatible)'):
+                    configuration = 'Development (10.5 Compatible)',
+                    **kwargs):
 
-    return build_step(
+    return shell_step(
         command = [
             'xcodebuild',
             '-target', target,
@@ -94,11 +96,8 @@ def xcodebuild_step(target = 'Everything',
             'clean',
             'build',
             ],
+        **kwargs
         )
-
-
-def make_step(target='all'):
-    return build_step(command = ['make', target])
 
 
 component_build_steps = (
@@ -127,7 +126,7 @@ component_build_steps = (
                 description = ['updating', 'submodules'],
                 descriptionDone = ['update', 'submodules'],
                 ),
-            build_step(
+            shell_step(
                 command = ['python', 'fresh_build.py'],
                 ),
             ]),
@@ -144,12 +143,51 @@ component_build_steps = (
 
     ('build_mw_core_plugins', [
             git_step('mw_core_plugins'),
-            make_step(),
+            xcodebuild_step(
+                subdir = 'DriftingGratingStimulus',
+                target = 'DriftingGratingStimulusPlugin',
+                configuration = 'Debug (10.5 Compatible)',
+                ),
+            xcodebuild_step(
+                subdir = 'HIDPlugin',
+                target = 'HIDPlugin',
+                ),
+            xcodebuild_step(
+                subdir = 'NE500',
+                ),
+            xcodebuild_step(
+                subdir = 'SidewinderPlugAndPlayGamepadPlugin',
+                target = 'MSSWGamepadPlugin',
+                ),
             ]),
 
     ('build_dicarlolab_mwcore_plugins', [
             git_step('dicarlolab_mwcore_plugins'),
-            make_step(),
+            xcodebuild_step(
+                subdir = 'CircleStimulus',
+                target = 'CircleStimulusPlugin',
+                configuration = 'Debug',
+                ),
+            xcodebuild_step(
+                subdir = 'FakeMonkeyPlugin',
+                target = 'FakeMonkeyPlugin',
+                configuration = 'Debug',
+                ),
+             xcodebuild_step(
+                subdir = 'ITC18Plugin',
+                target = 'ITC18Plugin',
+                configuration = 'Debug',
+                ),
+             xcodebuild_step(
+                subdir = 'MoviePlugin',
+                target = 'MovieStimulusPlugin',
+                configuration = 'Debug',
+                ),
+             xcodebuild_step(
+                subdir = 'RectangleStimulus',
+                target = 'RectangleStimulusPlugin',
+                configuration = 'Debug',
+                ),
             ]),
 
     ('build_mw_cocoa', [
@@ -164,12 +202,39 @@ component_build_steps = (
 
     ('build_mw_client_plugins', [
             git_step('mw_client_plugins'),
-            make_step(),
-            ]),
+            xcodebuild_step(
+                subdir = 'BehavioralWindow',
+                ),
+            xcodebuild_step(
+                subdir = 'PythonBridgePlugin',
+                ),
+            xcodebuild_step(
+                subdir = 'VariablesWindow',
+                ),
+             ]),
 
     ('build_dicarlolab_mwclient_plugins', [
             git_step('dicarlolab_mwclient_plugins'),
-            make_step(),
+            xcodebuild_step(
+                subdir = 'CalibratorWindow',
+                target = 'CalibratorWindow',
+                configuration = 'Debug',
+                ),
+            xcodebuild_step(
+                subdir = 'EyeWindow',
+                target = 'MonkeyWorksEyeWindow',
+                configuration = 'Debug',
+                ),
+            xcodebuild_step(
+                subdir = 'MATLABWindow',
+                target = 'MonkeyWorksMATLABWindow',
+                configuration = 'Debug',
+                ),
+            xcodebuild_step(
+                subdir = 'RewardWindow',
+                target = 'MonkeyWorksRewardWindow',
+                configuration = 'Debug',
+                ),
             ]),
 
     ('build_mw_editor', [
@@ -184,7 +249,23 @@ component_build_steps = (
 
     ('build_mw_datatools', [
             git_step('mw_datatools'),
-            make_step(),
+            xcodebuild_step(
+                subdir = 'DataFileIndexer',
+                ),
+            xcodebuild_step(
+                subdir = 'DataFileReader',
+                target = 'mwdfr',
+                configuration = 'Debug',
+                ),
+            shell_step(
+                subdir = 'MatlabDataReader',
+                command = ['make', 'clean', 'install'],
+                ),
+            xcodebuild_step(
+                subdir = 'MonkeyWorksStreamUtilities',
+                target = 'libMonkeyWorksStreamUtilities',
+                configuration = 'Debug',
+                ),
             ]),
 
     ('build_mw_examples', [
@@ -194,9 +275,9 @@ component_build_steps = (
 
     ('build_installer', [
             git_step('dicarlolab_mwbuild'),
-            build_step(
+            shell_step(
+                subdir = 'installer',
                 command = ['./build_installer', installer_version],
-                workdir = 'build/installer',
                 ),
             transfer.FileUpload(
                 slavesrc = installer_slavesrc,
