Fixed build order for mw_datatools

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -257,14 +257,16 @@ component_build_steps = (
                 target = 'mwdfr',
                 configuration = 'Debug',
                 ),
-            shell_step(
-                subdir = 'MatlabDataReader',
-                command = ['make', 'clean', 'install'],
-                ),
+            # MatlabDataReader depends on MonkeyWorksStreamUtilities,
+            # so we need to build the latter first
             xcodebuild_step(
                 subdir = 'MonkeyWorksStreamUtilities',
                 target = 'libMonkeyWorksStreamUtilities',
                 configuration = 'Debug',
+                ),
+            shell_step(
+                subdir = 'MatlabDataReader',
+                command = ['make', 'clean', 'install'],
                 ),
             ]),
 
