Used mw_xcodebuild to build Xcode projects

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -90,11 +90,10 @@ def xcodebuild_step(target = 'Everything',
 
     return shell_step(
         command = [
-            'xcodebuild',
-            '-target', target,
-            '-configuration', configuration,
-            'clean',
-            'build',
+            ('/Library/Application Support/MonkeyWorks/Developer/gcc40/bin/'
+             'mw_xcodebuild'),
+            target,
+            configuration,
             ],
         **kwargs
         )
