Updates for name change

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -90,7 +90,7 @@ def xcodebuild_step(target = 'Everything',
 
     return shell_step(
         command = [
-            ('/Library/Application Support/MonkeyWorks/Developer/gcc40/bin/'
+            ('/Library/Application Support/MWorks/Developer/gcc40/bin/'
              'mw_xcodebuild'),
             target,
             configuration,
@@ -108,13 +108,21 @@ component_build_steps = (
                     '/Applications/MWClient.app',
                     '/Applications/MWEditor.app',
                     '/Applications/MWServer.app',
-                    '/Documents/MonkeyWorks',
-                    '/Library/Application Support/MonkeyWorks',
-                    '/Library/Frameworks/MonkeyWorksCocoa.framework',
-                    '/Library/Frameworks/MonkeyWorksCore.framework',
+                    '/Documents/MWorks',
+                    '/Library/Application Support/MWorks',
+                    '/Library/Frameworks/MWorksCocoa.framework',
+                    '/Library/Frameworks/MWorksCore.framework',
                     ],
                 description = 'cleaning',
                 descriptionDone = 'clean',
+                ),
+            ]),
+
+    ('install_xcode_configs', [
+            git_step('mw_build'),
+            shell_step(
+                subdir = 'xcode_config',
+                command = ['./install_xcconfigs.sh'],
                 ),
             ]),
 
@@ -126,7 +134,8 @@ component_build_steps = (
                 descriptionDone = ['update', 'submodules'],
                 ),
             shell_step(
-                command = ['python', 'fresh_build.py'],
+                command = ['python', 'fresh_build.py', '--rebuild_all',
+                           '--sdk=10.5'],
                 ),
             ]),
 
@@ -145,7 +154,6 @@ component_build_steps = (
             xcodebuild_step(
                 subdir = 'DriftingGratingStimulus',
                 target = 'DriftingGratingStimulusPlugin',
-                configuration = 'Debug (10.5 Compatible)',
                 ),
             xcodebuild_step(
                 subdir = 'HIDPlugin',
@@ -165,27 +173,22 @@ component_build_steps = (
             xcodebuild_step(
                 subdir = 'CircleStimulus',
                 target = 'CircleStimulusPlugin',
-                configuration = 'Debug',
                 ),
             xcodebuild_step(
                 subdir = 'FakeMonkeyPlugin',
                 target = 'FakeMonkeyPlugin',
-                configuration = 'Debug',
                 ),
              xcodebuild_step(
                 subdir = 'ITC18Plugin',
                 target = 'ITC18Plugin',
-                configuration = 'Debug',
                 ),
              xcodebuild_step(
                 subdir = 'MoviePlugin',
                 target = 'MovieStimulusPlugin',
-                configuration = 'Debug',
                 ),
              xcodebuild_step(
                 subdir = 'RectangleStimulus',
                 target = 'RectangleStimulusPlugin',
-                configuration = 'Debug',
                 ),
             ]),
 
@@ -217,22 +220,18 @@ component_build_steps = (
             xcodebuild_step(
                 subdir = 'CalibratorWindow',
                 target = 'CalibratorWindow',
-                configuration = 'Debug',
                 ),
             xcodebuild_step(
                 subdir = 'EyeWindow',
-                target = 'MonkeyWorksEyeWindow',
-                configuration = 'Debug',
+                target = 'MWorksEyeWindow',
                 ),
             xcodebuild_step(
                 subdir = 'MATLABWindow',
-                target = 'MonkeyWorksMATLABWindow',
-                configuration = 'Debug',
+                target = 'MWorksMATLABWindow',
                 ),
             xcodebuild_step(
                 subdir = 'RewardWindow',
-                target = 'MonkeyWorksRewardWindow',
-                configuration = 'Debug',
+                target = 'MWorksRewardWindow',
                 ),
             ]),
 
@@ -256,11 +255,11 @@ component_build_steps = (
                 target = 'mwdfr',
                 configuration = 'Debug',
                 ),
-            # MatlabDataReader depends on MonkeyWorksStreamUtilities,
-            # so we need to build the latter first
+            # MatlabDataReader depends on MWorksStreamUtilities, so we
+            # need to build the latter first
             xcodebuild_step(
-                subdir = 'MonkeyWorksStreamUtilities',
-                target = 'libMonkeyWorksStreamUtilities',
+                subdir = 'MWorksStreamUtilities',
+                target = 'libMWorksStreamUtilities',
                 configuration = 'Debug',
                 ),
             shell_step(
