Get core components from mworks-project instead of dicarlolab-mworks

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -24,7 +24,7 @@ import local_config as config
 c = BuildmasterConfig = {}
 
 c['projectName'] = 'MWorks'
-c['projectURL'] = config.project_url
+c['projectURL'] = 'http://mworks-project.github.com/'
 c['buildbotURL'] = 'http://%s:%d/' % (config.buildbot_hostname,
                                       config.webstatus_port)
 
@@ -66,8 +66,8 @@ c['slavePortnum'] = config.slave_port
 
 
 
-def git_step(reponame, mode='update'):
-    repourl = '%s/%s.git' % (config.repository_base_url, reponame)
+def git_step(reponame, account='mworks-project', mode='update'):
+    repourl = 'git://github.com/%s/%s.git' % (account, reponame)
     return source.Git(repourl=repourl, mode=mode)
 
 
@@ -169,7 +169,7 @@ component_build_steps = (
             ]),
 
     ('build_dicarlolab_mwcore_plugins', [
-            git_step('dicarlolab_mwcore_plugins'),
+            git_step('dicarlolab_mwcore_plugins', account='dicarlolab-mworks'),
             xcodebuild_step(
                 subdir = 'CircleStimulus',
                 target = 'CircleStimulusPlugin',
@@ -216,7 +216,10 @@ component_build_steps = (
              ]),
 
     ('build_dicarlolab_mwclient_plugins', [
-            git_step('dicarlolab_mwclient_plugins'),
+            git_step(
+                reponame = 'dicarlolab_mwclient_plugins',
+                account = 'dicarlolab-mworks',
+                ),
             xcodebuild_step(
                 subdir = 'CalibratorWindow',
                 target = 'CalibratorWindow',
@@ -272,7 +275,7 @@ component_build_steps = (
             ]),
 
     ('build_installer', [
-            git_step('dicarlolab_mwbuild'),
+            git_step('dicarlolab_mwbuild', account='dicarlolab-mworks'),
             shell_step(
                 subdir = 'installer',
                 command = ['./build_installer', installer_version],
