Removed MacOSX-10.5-x86_64 build slave from master.cfg

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -47,10 +47,9 @@ installer_masterdest = (config.installer_destination_path + '/' +
 
 
 
-macosx_10_5_x86_64 = 'MacOSX-10.5-x86_64'
 macosx_10_6_x86_64 = 'MacOSX-10.6-x86_64'
 
-slave_names = [macosx_10_5_x86_64, macosx_10_6_x86_64]
+slave_names = [macosx_10_6_x86_64]
 default_slavename = macosx_10_6_x86_64
 
 c['slaves'] = [BuildSlave(name, config.slave_pass) for name in slave_names]
