Run unit and marionette tests with nightly build

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -37,6 +37,12 @@ installer_slavesrc = '/tmp/mw_installer/' + installer_filename
 installer_masterdest = (config.installer_destination_path + '/' +
                         installer_filename)
 
+mw_app_support_dir = '/Library/Application Support/MWorks/'
+mw_cache_dir = mw_app_support_dir + 'Experiment Cache/'
+mw_config_dir = mw_app_support_dir + 'Configuration/'
+mw_data_dir = '/Documents/MWorks/Data/'
+mw_developer_dir = mw_app_support_dir + 'Developer/'
+
 
 
 ################################################################################
@@ -89,8 +95,7 @@ def xcodebuild_step(target = 'Everything',
 
     return shell_step(
         command = [
-            ('/Library/Application Support/MWorks/Developer/gcc40/bin/'
-             'mw_xcodebuild'),
+            mw_developer_dir + 'gcc40/bin/mw_xcodebuild',
             target,
             configuration,
             ],
@@ -98,7 +103,7 @@ def xcodebuild_step(target = 'Everything',
         )
 
 
-component_build_steps = (
+build_builder_steps = (
 
     ('clean_all', [
             shell_step(
@@ -289,16 +294,55 @@ component_build_steps = (
     )
 
 
-composite_build_steps = (
+test_builder_steps = tuple(
 
-    ('build_all', [
+    ('test_' + arch_name, [
+            shell_step(
+                command = [
+                    'cp', '-f',
+                    mw_config_dir + 'examples/setup_variables_macbook.xml',
+                    mw_config_dir + 'setup_variables.xml',
+                    ],
+                description = ['creating', 'config', 'file'],
+                descriptionDone = ['create', 'config', 'file'],
+                ),
+            shell_step(
+                command = ['rm', '-Rf', mw_cache_dir, mw_data_dir],
+                description = ['deleting', 'data', 'dirs'],
+                descriptionDone = ['delete', 'data', 'dirs'],
+                ),
+            shell_step(
+                command = ['mkdir', '-p', mw_cache_dir, mw_data_dir],
+                description = ['recreating', 'data', 'dirs'],
+                descriptionDone = ['recreate', 'data', 'dirs'],
+                ),
+            shell_step(
+                command = [mw_developer_dir + 'tests/test_mworks', arch_name],
+                description = ['running', 'tests'],
+                descriptionDone = ['run', 'tests'],
+                )
+            ])
+    for arch_name in ('x86_64', 'i386')
+
+    )
+
+
+aggregate_builder_steps = tuple(
+
+    (builder_name, [
             Trigger(
                 schedulerNames = [component_info[0]],
                 waitForFinish = True,
                 updateSourceStamp = False,
                 )
-            for component_info in component_build_steps
-            ]),
+            for component_info in builder_steps
+            ])
+    for builder_name, builder_steps in
+    (
+        ('build_all', build_builder_steps),
+        ('test_all', test_builder_steps),
+        ('build_and_test_all', (('build_all',), ('test_all',))),
+        )
 
     )
 
@@ -316,12 +360,15 @@ c['builders'] = []
 c['schedulers'] = [] 
 
 
-for build_steps in (component_build_steps, composite_build_steps):
-    for builder_name, factory_steps in build_steps:
+for builder_info in (build_builder_steps,
+                     test_builder_steps,
+                     aggregate_builder_steps):
+
+    for builder_name, builder_steps in builder_info:
         c['builders'].append(BuilderConfig(
                 name = builder_name,
                 slavename = default_slavename,
-                factory = factory.BuildFactory(factory_steps),
+                factory = factory.BuildFactory(builder_steps),
                 ))
 
         c['schedulers'].append(Triggerable(
@@ -332,7 +379,7 @@ for build_steps in (component_build_steps, composite_build_steps):
 
 c['schedulers'].append(Nightly(
             name = 'nightly_build_and_test',
-            builderNames = ['build_all'],
+            builderNames = ['build_and_test_all'],
             branch = None,
             hour = 0,
             ))
