Verify that Xcode templates compile as part of nightly build

--- a/buildbot/master.cfg
+++ b/buildbot/master.cfg
@@ -38,9 +38,11 @@ installer_masterdest = (config.installer_destination_path + '/' +
                         installer_filename)
 
 mw_app_support_dir = '/Library/Application Support/MWorks/'
+mw_doc_dir = '/Documents/MWorks/'
+
 mw_cache_dir = mw_app_support_dir + 'Experiment Cache/'
 mw_config_dir = mw_app_support_dir + 'Configuration/'
-mw_data_dir = '/Documents/MWorks/Data/'
+mw_data_dir = mw_doc_dir + 'Data/'
 mw_developer_dir = mw_app_support_dir + 'Developer/'
 
 
@@ -112,8 +114,8 @@ build_builder_steps = (
                     '/Applications/MWClient.app',
                     '/Applications/MWEditor.app',
                     '/Applications/MWServer.app',
-                    '/Documents/MWorks',
-                    '/Library/Application Support/MWorks',
+                    mw_doc_dir,
+                    mw_app_support_dir,
                     '/Library/Frameworks/MWorksCocoa.framework',
                     '/Library/Frameworks/MWorksCore.framework',
                     ],
@@ -276,6 +278,20 @@ build_builder_steps = (
     ('build_mw_examples', [
             git_step('mw_examples'),
             xcodebuild_step('InstallTests', 'Release'),
+            ]),
+
+    ('build_mw_xcode_templates', [
+            git_step('mw_xcode_templates'),
+            xcodebuild_step(subdir='MWorks/MWorks Core Plugin'),
+            shell_step(
+                command = [
+                    'rm', '-Rf',
+                    (mw_app_support_dir +
+                     'Plugins/Core/___PROJECTNAME___.bundle'),
+                    ],
+                description = ['cleaning', 'up'],
+                descriptionDone = ['cleanup'],
+                )
             ]),
 
     ('build_installer', [
